@@ -1,3 +1,7 @@
+2003-10-19  Tom Tromey  <tromey@redhat.com>
+
+	* commands.cc (log): Add each seen id to `cycles'.
+
 2003-10-19  Matt Kraai  <kraai@ftbfs.org>
 
 	* commands.cc (merge): Use app.branch_name instead of args[0] for
